feat: complete supremeai backend integration, unified controllers, MCP marketplace, and improved tests